--- a/style.css
+++ b/style.css
@@ -326,6 +326,17 @@ main {
     margin-bottom: 10px;
 }
 
+#work {
+    text-align: center; /* Esto centrará el h2 */
+}
+
+.work-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    margin-top: 2rem;
+}
+
 .work-item h3 {
     color: var(--color-primary);
     font-size: 1.3rem;
@@ -427,3 +438,4 @@ footer {
     color: #888;
     font-size: 0.8rem;
 }
+
